<resources>
    <string name="app_name">Busy Bee</string>
    <string name="create_task">create task</string>
    <string name="assignee">Assignee</string>
    <string name="content">Content</string>
    <string name="task_created_successfully">Task is created successfully</string>
    <string name="_6_tasks">6 tasks</string>
    <string name="to_do">Todo</string>
    <string name="task_name">Task Name</string>
    <string name="move_to_in_progress">Move to in progress</string>
    <string name="generate_model">Generate Model</string>
    <string name="theme_settings">Theme</string>
    <string name="logout_settings">Logout</string>
    <string name="in_progress">In progress</string>
    <string name="done">Done</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="team_tasks">Team Tasks</string>
    <string name="my_tasks">Personal Tasks</string>
    <string name="text_home_date">Tue, 4</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="Do_not_have_an_account">Don’t have an account ?</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="full_name">User Name</string>
    <string name="create_account">Create Account</string>
    <string name="hello_honey">Hello Honey</string>
    <string name="tasks">%d Tasks</string>
    <string name="total_tasks">Total tasks</string>
    <string name="todos_percentage">%d%%</string>
    <string name="settings">Settings</string>
    <string name="dialog_title">Do you want Exit ?</string>
    <string name="confirm">confirm</string>
    <string name="exit">exit</string>
    <string name="stay">stay</string>
    <string name="canceled">canceled</string>
    <string name="success_message">Welcome to BusyBee</string>
    <string name="unRegisterd">Your internet may be disconnected</string>
    <string name="failure_Message">account not registered</string>
    <string name="validateUsernameMessage">username must be four characters at least</string>
    <string name="validatePasswordMessage">password should contains 8 characters at least</string>
    <string name="accountCreatedSuccessfully">account created successfully</string>
    <string name="registerFailureMessage">Opps something went wrong</string>
    <string name="passwordIsNotTheSame">password is not the same as above</string>
    <string name="move_to_inprogress">Move to in progress</string>
    <string name="move_to_done">Mark as done</string>
    <string name="ok">OK</string>
    <string name="you_have_not_tasks">What are you doing here? There are currently no unfinished tasks, so enjoy your time.</string>
    <string name="personal">Personal</string>
    <string name="team">Team</string>
    <string name="no_internt">No Internet Connection, Check Your Connectivity First !!!</string>
    <string name="text_no_task_done_team">You and your team are crushing it! There are currently no completed team tasks, but keep up the good work and check back here soon.</string>
    <string name="text_no_task_todo_team">Ready to tackle your team\'s to-do list? There are currently no unfinished team tasks, so enjoy your time until the next one comes in.</string>
    <string name="text_no_task_inprogress_team">Great teamwork! There are currently no tasks in progress, but you can start by assigning a new one to your team.</string>
    <string name="text_no_task_inprogress_personal">You\'re making progress! Keep it up! There are currently no tasks in progress, but you can start by adding a new one.</string>
    <string name="text_no_task_done_personal">Congratulations! You\'re on a roll! There are currently no completed tasks, but keep up the good work and check back here soon.</string>
    <string name="username_cannot_be_empty">Username cannot be empty.</string>
    <string name="username_must_be_at_least_4">Username must be at least 4.</string>
    <string name="password_cannot_be_empty">Password cannot be empty.</string>
    <string name="password_must_be_at_least_8">Password must be at least 8.</string>
    <string name="confirm_password_cannot_be_empty">Confirm password cannot be empty.</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="status">Status:</string>
    <string name="details">Details</string>
    <string name="title_must_be_at_least_3_characters">Name must be at least 3 characters</string>
    <string name="title_should_not_be_empty">Name should not be empty</string>
    <string name="description_should_not_be_empty">Content should not be empty</string>
    <string name="description_must_be_at_least_12_characters">Content must be at least 12 characters</string>
    <string name="assignee_should_not_be_empty">Assignee should not be empty</string>
    <string name="assignee_must_be_at_least_3_characters">Assignee must be at least 3 characters</string>
    <string name="text_login_desc">Enjoy with your tasks!</string>
    <string name="good_to_see_you">Nice to see you</string>
    <string name="join_us">Join us</string>
    <string name="control_your_task">control your task</string>


</resources>