<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/BackgroundCustomSheet"
    >

    <ImageButton
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_small"
        android:background="@null"
        android:padding="@dimen/spacing_small"
        android:src="@drawable/ic_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_create_task"
        style="@style/HeaderTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_large"
        android:gravity="center"
        android:text="@string/create_task"
        android:textSize="@dimen/text_giant"
        app:layout_constraintBottom_toTopOf="@id/input_layout_task_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_cancel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_task_name"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_name"
        app:layout_constraintBottom_toTopOf="@id/input_layout_assignee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_create_task"
        app:startIconDrawable="@drawable/ic_add_square">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_task_name"
            android:gravity="top"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/spacing_medium" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_assignee"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/assignee"
        app:layout_constraintBottom_toTopOf="@id/input_layout_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_task_name"
        app:startIconDrawable="@drawable/ic_user2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_assignee"
            android:gravity="top"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/spacing_medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_content"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_tiny"
        android:layout_marginBottom="@dimen/spacing_large"
        android:hint="@string/content"
        app:layout_constraintBottom_toTopOf="@id/button_createTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_layout_assignee"
        app:startIconTint="@color/primary_400">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:lines="3"
            android:paddingVertical="@dimen/spacing_medium" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_createTask"
        style="@style/ButtonSignUpStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/spacing_giant"
        android:text="@string/create_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_created_successfully"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/text_created_successfully"
        app:layout_constraintTop_toBottomOf="@id/button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/create_successfuliy" />

    <TextView
        android:id="@+id/text_created_successfully"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_large"
        android:text="@string/task_created_successfully"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/button_createTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottie_created_successfully" />
</androidx.constraintlayout.widget.ConstraintLayout>